--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,3 +6,37 @@ server:
     threads:
       max: 50
       min-spare: 5
+
+
+polar:
+  greeting: Welcome to Cloud Native Spring
+
+spring:
+  application:
+    name: catalog-service
+  config:
+    import: "optional:configserver:"
+  cloud:
+    config:
+      uri: http://localhost:8888
+      request-connect-timeout: 5000
+      request-read-timeout: 5000
+      fail-fast: true
+      retry:
+        max-attempts: 6
+        initial-interval: 1000
+        max-interval: 2000
+        multiplier: 1.1
+  datasource:
+    username: user
+    password: 123
+    url: jdbc:postgresql://localhost:5431/polardb_catalog
+    hikari:
+      connection-timeout: 2000
+      maximum-pool-size: 5
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
